Load plugins from so files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,22 @@ authors = ["Sorami Hisamoto <s@89.io>"]
 edition = "2018"
 license = "Apache-2.0"
 
+[workspace]
+members = [
+    "plugin/connect_cost/*",
+    "plugin/input_text/*",
+    "plugin/oov/*",
+    "plugin/path_rewrite/*"
+]
+
 [dependencies]
 cfg-if = "0.1"
+libloading = "0.7"
 multiset = "0.0.5"
 nom = "4.2.2"
 regex = "1.5"
 structopt = "0.2"
 thiserror = "1.0"
-unicode-normalization = "0.1.19"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
