--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ libloading = "0.7"
 multiset = "0.0.5"
 nom = "4"
 regex = "1.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
 
