--- a/plugin/input_text/default_input_text/Cargo.toml
+++ b/plugin/input_text/default_input_text/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sudachi = { path = "../../../" }
 unicode-normalization = "0.1.19"
