--- a/plugin/oov/simple_oov/Cargo.toml
+++ b/plugin/oov/simple_oov/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sudachi = { path = "../../../" }
