--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ thiserror = "1.0"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
+tempfile = "3"
 
 [features]
 # Compile dictionary into executable (specifying dictionary becomes optional)
