--- a/plugin/oov/mecab_oov/Cargo.toml
+++ b/plugin/oov/mecab_oov/Cargo.toml
@@ -10,3 +10,6 @@ crate-type = ["cdylib"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sudachi = { path = "../../../" }
+
+[dev-dependencies]
+tempfile = "3"
