--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sudachi"
 version = "0.1.0"
-authors = ["Sorami Hisamoto <s@89.io>"]
+authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 license = "Apache-2.0"
 
