--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "sudachi"
 version = "0.1.0"
 authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
+description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
+readme = "README.md"
+homepage = "https://github.com/WorksApplications/sudachi.rs"
+repository = "https://github.com/WorksApplications/sudachi.rs"
 license = "Apache-2.0"
 
 [workspace]
