--- a/plugin/connect_cost/inhibit_connection/Cargo.toml
+++ b/plugin/connect_cost/inhibit_connection/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "inhibit_connection"
 version = "0.1.0"
+authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 license = "Apache-2.0"
 
