--- a/plugin/path_rewrite/join_katakana_oov/Cargo.toml
+++ b/plugin/path_rewrite/join_katakana_oov/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "join_katakana_oov"
 version = "0.1.0"
+authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 license = "Apache-2.0"
 
