add windows build to CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,12 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest ] # add macOS-latest later
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
