--- a/plugin/input_text/default_input_text/Cargo.toml
+++ b/plugin/input_text/default_input_text/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sudachi = { path = "../../../" }
+sudachi = { path = "../../../sudachi" }
 unicode-normalization = "0.1.19"
 
 [dev-dependencies]
