--- a/plugin/oov/mecab_oov/Cargo.toml
+++ b/plugin/oov/mecab_oov/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sudachi = { path = "../../../" }
+sudachi = { path = "../../../sudachi" }
 
 [dev-dependencies]
 tempfile = "3"
