--- a/plugin/path_rewrite/join_numeric/Cargo.toml
+++ b/plugin/path_rewrite/join_numeric/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sudachi = { path = "../../../" }
+sudachi = { path = "../../../sudachi" }
