--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -18,6 +18,7 @@ nom = "7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+memmap2 = "0.5"
 
 [dev-dependencies]
 tempfile = "3"
