--- a/.github/workflows/rust-noncached.yml
+++ b/.github/workflows/rust-noncached.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest ] # add macOS-latest later
+        os: [ ubuntu-latest, windows-latest, macOS-latest ]
 
     runs-on: ${{ matrix.os }}
 
@@ -21,9 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Download dictionary
         run: bash fetch_dictionary.sh
-      - name: Build release
-        run: cargo build --verbose --all --release
-      - name: Build debug
-        run: cargo build --verbose --all
-      - name: Run tests
+      - name: Run tests (Debug)
+        run: cargo test --verbose
+      - name: Run tests (Release)
         run: cargo test --verbose
