--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -13,13 +13,13 @@ license = "Apache-2.0"
 fancy-regex = "0.7"
 lazy_static = "1.4.0"
 libloading = "0.7"
-multiset = "0.0.5"
 nom = "7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 memmap2 = "0.5"
 unicode-normalization = "0.1.19"
+bitflags = "1.3"
 
 [dev-dependencies]
 tempfile = "3"
