--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -20,6 +20,8 @@ thiserror = "1.0"
 memmap2 = "0.5"
 unicode-normalization = "0.1.19"
 bitflags = "1.3"
+aho-corasick = "0.7"
+regex = "1.5"
 
 [dev-dependencies]
 tempfile = "3"
