--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,12 +1,25 @@
 name: Deploy Documentation
-# deploy python doc only for now
 
 on:
   push:
     branches: [ develop ]
 
 jobs:
-  deploy:
+  build-rust:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build document
+        # build document of lib only for now to avoid name collision.
+        working-directory: ./sudachi
+        run: cargo doc --no-deps
+
+     - name: Move docs
+        run: mv ./target/doc ./docs/rust
+
+
+  build-python:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,8 +39,18 @@ jobs:
         working-directory: ./python/docs
         run: make html
 
+      - name: Move docs
+        run: mv ./python/docs/build/html ./docs/python
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build-rust, build-python]
+    steps:
+      - uses: actions/checkout@v2
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./python/docs/build/html
+          publish_dir: ./docs
