--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,7 @@ jobs:
 
     - name: Check that binary works (C mode)
       run: |
+        cargo build -p sudachi-cli
         echo $PWD
         $PWD/target/debug/sudachi $PWD/.github/data/input.txt -o result-c.txt
         git diff --color=always --no-index -- result-c.txt $PWD/.github/data/expected-c.txt
