--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,5 +33,19 @@ jobs:
           ~/.cargo/git/db/
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Run tests (Debug)
       run: cargo test --verbose
+
+    - name: Build CLI binary
+      run: cargo build -p sudachi-cli
+
+    - name: Check that binary works (C mode)
+      run: |
+        target/debug/sudachi .github/data/input.txt -o result-c.txt
+        git diff --color=always --no-index -- result-c.txt .github/data/expected-c.txt
+
+    - name: Check that binary works (A mode)
+      run: |
+        target/debug/sudachi .github/data/input.txt -m A -o result-a.txt
+        git diff --color=always --no-index -- result-a.txt .github/data/expected-a.txt
