--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -10,22 +10,22 @@ repository = "https://github.com/WorksApplications/sudachi.rs"
 license = "Apache-2.0"
 
 [dependencies]
-fancy-regex = "0.7"
-lazy_static = "1.4.0"
-libloading = "0.7"
-nom = "7"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0"
-memmap2 = "0.5"
-unicode-normalization = "0.1.19"
-bitflags = "1.3"
-aho-corasick = "0.7"
-regex = "1.5"
+fancy-regex = "0.7" # MIT
+lazy_static = "1.4.0" # MIT/Apache 2.0
+libloading = "0.7" # ISC (MIT-compatible)
+nom = "7" # MIT
+serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
+serde_json = "1.0" # MIT/Apache 2.0
+thiserror = "1.0" # MIT/Apache 2.0
+memmap2 = "0.5" # MIT/Apache 2.0
+unicode-normalization = "0.1.19" # MIT/Apache 2.0
+bitflags = "1.3" # MIT/Apache 2.0
+aho-corasick = "0.7" # MIT/Apache 2.0
+regex = "1.5" # MIT/Apache 2.0
 
 [dev-dependencies]
-tempfile = "3"
-claim = "0.5"
+tempfile = "3" # MIT/Apache 2.0
+claim = "0.5" # MIT/Apache 2.0
 
 # Plugins for tests
 default_input_text = { path = "../plugin/input_text/default_input_text" }
