be able to trigger this

--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -3,6 +3,8 @@ name: Python Source Package (Common)
 on:
   push:
     branches: [ develop ]
+  pull_request:
+    branches: [ develop ]
 
 jobs:
   build-linux-wheel:
