--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -1,4 +1,4 @@
-name: Python Source Package (Common)
+name: Python Binary Package (Linux-PGO)
 
 on:
   push:
@@ -32,6 +32,5 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: linux-releases
           path: python/dist/*manylinux*
 
