--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -1,4 +1,4 @@
-name: Python Binary Package (Linux-PGO)
+name: Python Binary Packages
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches: [ develop ]
 
 jobs:
-  build-linux-wheel:
-    name: Build Python Wheels (dev)
+  build-linux-wheels:
+    name: Build Linux Python Wheels (+PGO)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,3 +34,28 @@ jobs:
         with:
           path: python/dist/*manylinux*
 
+  build-non-linux-wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, macOS-latest]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v2
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.2.0b1
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse python
+        # to supply options, put them in 'env', like:
+        # env:
+        #   CIBW_SOME_OPTION: value
+
+      - uses: actions/upload-artifact@v2
+        with:
+          path: ./wheelhouse/*.whl
