--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -46,9 +46,13 @@ jobs:
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.2.0b1
+        run: |
+          python -m pip install -U pip
+          python -m pip install cibuildwheel==2.2.0b1
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse python
