--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -40,26 +40,24 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macOS-latest]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
       - uses: actions/checkout@v2
 
-      # Used to host cibuildwheel
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
 
-      - name: Install cibuildwheel
+      - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install cibuildwheel
+          python -m pip install -U setuptools setuptools_rust wheel
 
-      - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse python
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+      - name: build wheel
+        run: |
+          cd python && python setup.py bdist_wheel
 
       - uses: actions/upload-artifact@v2
         with:
-          path: ./wheelhouse/*.whl
+          path: python/dist/*.whl
