--- a/.github/workflows/build-python-dev-linux.yml
+++ b/.github/workflows/build-python-dev-linux.yml
@@ -35,12 +35,12 @@ jobs:
           path: python/dist/*manylinux*
 
   build-non-linux-wheels:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macOS-latest]
-        python-version: [3.6, 3.7, 3.8]
+        os: [windows-latest, macOS-11]
+        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
 
     steps:
       - uses: actions/checkout@v2
@@ -48,6 +48,16 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install dependencies
         run: |
@@ -57,6 +67,9 @@ jobs:
       - name: build wheel
         run: |
           cd python && python setup.py bdist_wheel
+        env:
+          MACOSX_DEPLOYMENT_TARGET: 11
+
 
       - uses: actions/upload-artifact@v2
         with:
