rename workflow file

--- a/.github/workflows/build-python-wheels.yml
+++ b/.github/workflows/build-python-wheels.yml
@@ -3,8 +3,8 @@ name: Python Binary Packages
 on:
   push:
     branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+#  pull_request:
+#    branches: [ develop ]
 
 jobs:
   build-linux-wheels:
