--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sudachi-python"
+name = "sudachipy"
 version = "0.6.0"
 edition = "2018"
 description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 
 
 [lib]
-name = "sudachi_python"
+name = "sudachipy"
 crate-type = ["cdylib"]
 
 [dependencies]
