--- a/.github/workflows/build-python-wheels.yml
+++ b/.github/workflows/build-python-wheels.yml
@@ -3,8 +3,8 @@ name: Python Binary Packages
 on:
   push:
     branches: [ develop ]
-#  pull_request:
-#    branches: [ develop ]
+  pull_request:
+    branches: [ develop ]
 
 jobs:
   build-linux-wheels:
@@ -39,7 +39,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macOS-11]
+        os: [windows-latest, macOS-latest]
         python-version: [ "3.6", "3.7", "3.8", "3.9" , "3.10" ]
 
     steps:
@@ -68,7 +68,7 @@ jobs:
         run: |
           cd python && python setup.py bdist_wheel
         env:
-          MACOSX_DEPLOYMENT_TARGET: 11
+          MACOSX_DEPLOYMENT_TARGET: 10.12
 
 
       - uses: actions/upload-artifact@v2
