--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sudachipy"
-version = "0.6.0"
+version = "0.6.0-rc1"
 edition = "2018"
 description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
 homepage = "https://github.com/WorksApplications/sudachi.rs"
@@ -16,6 +16,6 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.14.3", features = ["extension-module"] }
 
 [dependencies.sudachi]
-version = "*"
+version = "0.6.0-rc1"
 path = "../sudachi"
 
