--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -1,12 +1,8 @@
 name: Python Packages Test
 
 on:
-  workflow_dispatch:
-
-# following two lines must be commented out before merging, we don't want to run this on PRs
-# but for testing this we run this on PRs
-  pull_request:
-    branches: [ develop ]
+  push:
+    branches: [ pre/v* ]
 
 jobs:
   build-sdist:
@@ -116,10 +112,42 @@ jobs:
       - name: List files to upload
         run: ls -R dist/
 
-#       - name: Upload to TestPyPi
-#         working-directory: ./python
-#         env:
-#           TWINE_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
-#           TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-#         run:
-#           twine upload --repository testpypi dist/*
+      - name: Upload to TestPyPi
+        working-directory: ./python
+        env:
+          TWINE_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+        run:
+          twine upload --repository testpypi dist/*
+
+  install-and-test:
+    needs: [ upload-to-testpypi ]
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+        python-version: [ "3.6", "3.7", "3.8", "3.9" , "3.10" ]
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: python -m pip install sudachidict_core
+
+      - name: Install our module from TestPyPi
+        run: python -m pip install --pre -U -i https://test.pypi.org/simple/ SudachiPy
+
+      - name: Run test
+        working-directory: ./python
+        run: python -m unittest
+
+      - name: Check that binary works (C mode)
+        run: |
+          sudachipy .github/data/input.txt -o result-c.txt
+          git diff --color=always --no-index -- result-c.txt .github/data/expected-c.txt
+
+      - name: Check that binary works (A mode)
+        run: |
+          sudachipy .github/data/input.txt -m A -o result-c.txt
+          git diff --color=always --no-index -- result-a.txt .github/data/expected-c.txt
