--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -98,28 +98,20 @@ jobs:
     needs: [ build-sdist, build-non-linux-wheels, build-linux-wheels ]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - name: Install twine
-        run: |
-          python -m pip install --upgrade twine
-
       - uses: actions/download-artifact@v2
         with:
           name: artifact # default artifact name
           path: dist/
+
       - name: List files to upload
         run: ls -R dist/
 
-      - name: Upload to TestPyPi
-        working-directory: ./python
-        env:
-          TWINE_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-        run:
-          twine upload --repository testpypi dist/*
+      - name: Publish distribution to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: ${{ secrets.TESTPYPI_USERNAME }}
+          password: ${{ secrets.TESTPYPI_PASSWORD }}
+          repository_url: https://test.pypi.org/legacy/
 
   install-and-test:
     needs: [ upload-to-testpypi ]
