--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -109,9 +109,10 @@ jobs:
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          user: ${{ secrets.TESTPYPI_USERNAME }}
-          password: ${{ secrets.TESTPYPI_PASSWORD }}
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
           repository_url: https://test.pypi.org/legacy/
+          verbose: true
 
   install-and-test:
     needs: [ upload-to-testpypi ]
