--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -9,23 +9,26 @@ homepage = "https://github.com/WorksApplications/sudachi.rs"
 repository = "https://github.com/WorksApplications/sudachi.rs"
 license = "Apache-2.0"
 
-[dependencies]
+[dependencies] # this should be sorted
+aho-corasick = "0.7" # MIT/Apache 2.0
+bitflags = "1.3" # MIT/Apache 2.0
+csv = "1.1" # Unilicense/MIT
 fancy-regex = "0.7" # MIT
+indexmap = "1.7" # # MIT/Apache 2.0
 lazy_static = "1.4.0" # MIT/Apache 2.0
 libloading = "0.7" # ISC (MIT-compatible)
 nom = "7" # MIT
+memmap2 = "0.5" # MIT/Apache 2.0
+regex = "1.5" # MIT/Apache 2.0
 serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
 serde_json = "1.0" # MIT/Apache 2.0
 thiserror = "1.0" # MIT/Apache 2.0
-memmap2 = "0.5" # MIT/Apache 2.0
 unicode-normalization = "0.1.19" # MIT/Apache 2.0
-bitflags = "1.3" # MIT/Apache 2.0
-aho-corasick = "0.7" # MIT/Apache 2.0
-regex = "1.5" # MIT/Apache 2.0
+yada = "0.4" # MIT/Apache 2.0
 
 [dev-dependencies]
-tempfile = "3" # MIT/Apache 2.0
 claim = "0.5" # MIT/Apache 2.0
+tempfile = "3" # MIT/Apache 2.0
 
 # Plugins for tests
 default_input_text = { path = "../plugin/input_text/default_input_text" }
