read dictionary for dumping using internal APIs

--- a/sudachi-cli/Cargo.toml
+++ b/sudachi-cli/Cargo.toml
@@ -11,8 +11,10 @@ license = "Apache-2.0"
 
 [dependencies]
 sudachi = { path = "../sudachi" }
-structopt = "0.3" # MIT/Apache 2.0
+
 cfg-if = "1.0.0" # MIT/Apache 2.0
+memmap2 = "0.5" # MIT/Apache 2.0
+structopt = "0.3" # MIT/Apache 2.0
 
 [[bin]]
 name = "sudachi"
