--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -130,6 +130,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
         python-version: [ "3.6", "3.7", "3.8", "3.9" , "3.10" ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -137,11 +138,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: python -m pip install sudachidict_core
 
       - name: Install our module from TestPyPi
         run: python -m pip install --pre -U -i https://test.pypi.org/simple/ SudachiPy
+
+      - name: Install dependencies
+        run: python -m pip install sudachidict_core
 
       - name: Run test
         working-directory: ./python
