--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -20,6 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools setuptools-rust
+
+      - name: Make .devXX version
+        run: python ./python/latest_dev_version.py
+
       - name: Build
         working-directory: ./python
         run: bash build-sdist.sh
@@ -46,6 +50,9 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Make .devXX version
+        run: python ./python/latest_dev_version.py
 
       - uses: eiennohito/gha-manylinux-build@master
         with:
@@ -79,6 +86,9 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Make .devXX version
+        run: python ./python/latest_dev_version.py
 
       - name: Install dependencies
         run: |
@@ -120,6 +130,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
         python-version: [ "3.6", "3.7", "3.8", "3.9" , "3.10" ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -127,11 +138,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: python -m pip install sudachidict_core
 
       - name: Install our module from TestPyPi
         run: python -m pip install --pre -U -i https://test.pypi.org/simple/ SudachiPy
+
+      - name: Install dependencies
+        run: python -m pip install sudachidict_core
 
       - name: Run test
         working-directory: ./python
