use correct filename for checking

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,5 +52,5 @@ jobs:
 
     - name: Check that binary works (A mode / wakati)
       run: |
-        target/debug/sudachi .github/data/input.txt --mode=A --wakati -o result-a-wakati.txt
-        git diff --color=always --no-index -- result-a-wakati.txt .github/data/expected-a.txt
+        target/debug/sudachi .github/data/input.txt --mode=A --wakati -o result-wakati-a.txt
+        git diff --color=always --no-index -- result-wakati-a.txt .github/data/expected-wakati-a.txt
