install deps explicitly

--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -140,10 +140,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install our module from TestPyPi
-        run: python -m pip install --pre -U -i https://test.pypi.org/simple/ sudachipy[tests]
+        run: python -m pip install --pre -U -i https://test.pypi.org/simple/ sudachipy
 
       - name: Install dependencies
-        run: python -m pip install sudachidict_core
+        run: python -m pip install sudachidict_core tokenizers
 
       - name: Run test
         working-directory: ./python
