--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sudachi"
-version = "0.6.2"
+version = "0.6.3-a1"
 authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
