--- a/sudachi/Cargo.toml
+++ b/sudachi/Cargo.toml
@@ -14,12 +14,13 @@ aho-corasick = "0.7" # MIT/Apache 2.0
 bitflags = "1.3" # MIT/Apache 2.0
 csv = "1.1" # Unilicense/MIT
 fancy-regex = "0.10" # MIT
-indexmap = "1.7" # # MIT/Apache 2.0
+indexmap = "1.7" # MIT/Apache 2.0
+itertools = "0.10" # MIT/Apachie 2.0
 lazy_static = "1.4" # MIT/Apache 2.0
 libloading = "0.7" # ISC (MIT-compatible)
 nom = "7" # MIT
 memmap2 = "0.5" # MIT/Apache 2.0
-regex = "1.5" # MIT/Apache 2.0
+regex = "1" # MIT/Apache 2.0
 serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
 serde_json = "1.0" # MIT/Apache 2.0
 thiserror = "1.0" # MIT/Apache 2.0
