--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sudachipy"
-version = "0.6.4-a1"
+version = "0.6.4"
 edition = "2018"
 description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
 homepage = "https://github.com/WorksApplications/sudachi.rs"
