--- a/plugin/input_text/default_input_text/Cargo.toml
+++ b/plugin/input_text/default_input_text/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "default_input_text"
-version = "0.6.4"
+version = "0.6.5-a1"
 authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 license = "Apache-2.0"
