--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -133,7 +133,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
-        python-version: [ "3.6", "3.7", "3.8", "3.9" , "3.10" ]
+        python-version: [ "3.7", "3.8", "3.9" , "3.10" ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
