--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -144,7 +144,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install our module from TestPyPi
-        run: python -m pip install --pre -U -i https://test.pypi.org/simple/ sudachipy
+        run: python -m pip -vvvv install --pre -U -i https://test.pypi.org/simple/ sudachipy
 
       - name: Install dependencies
         run: python -m pip install sudachidict_core tokenizers
