--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -147,6 +147,9 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
+      - name: Show compatible tags
+        run: python -m pip debug --verbose
+
       - name: Install our module from TestPyPi
         run: python -m pip -vvvv install --pre -U -i https://test.pypi.org/simple/ SudachiPy
 
