--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -98,6 +98,7 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -U setuptools setuptools_rust wheel
+
       - name: build wheel
         run: |
           cd python && python setup.py bdist_wheel
@@ -143,8 +144,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
       - name: Install our module from TestPyPi
-        run: python -m pip -vvvv install --pre -U -i https://test.pypi.org/simple/ sudachipy
+        run: python -m pip -vvvv install --pre -U -i https://test.pypi.org/simple/ SudachiPy
 
       - name: Install dependencies
         run: python -m pip install sudachidict_core tokenizers
