--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -104,6 +104,7 @@ jobs:
           cd python && python setup.py bdist_wheel
         env:
           ARCHFLAGS: -arch x86_64 -arch arm64
+          MACOSX_DEPLOYMENT_TARGET: 10.12
 
       - uses: actions/upload-artifact@v2
         with:
