--- a/plugin/oov/simple_oov/Cargo.toml
+++ b/plugin/oov/simple_oov/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple_oov"
-version = "0.6.6"
+version = "0.6.7-a1"
 authors = ["Works Applications <sudachi@worksap.co.jp>"]
 edition = "2018"
 license = "Apache-2.0"
