--- a/.github/workflows/python-upload-test.yml
+++ b/.github/workflows/python-upload-test.yml
@@ -135,7 +135,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
-        python-version: [ "3.7", "3.8", "3.9" , "3.10" ]
+        python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
