--- a/.github/workflows/build-python-wheels.yml
+++ b/.github/workflows/build-python-wheels.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download dictionary
-        run: bash fetch_dictionary.sh
+        run: bash fetch_dictionary.sh "20220519" "core"
 
       - uses: actions/cache@v3
         with:
